# AI-Ticket-Agent

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  dashboard.py  deploy.py  docker-compose.yml  env.example  knowledge_base.txt  nginx.conf  pyproject.toml  run.py  slack_app.py  start.sh  test_crm_routing.py  test_email_notifications.py  test_escalation_scenarios.py  test_notifications.py  test_team_assignment.py
ai_ticket_agent/: __init__.py  agent.py  main.py  prompt.py
ai_ticket_agent/sub_agents/: __init__.py
ai_ticket_agent/sub_agents/assignment/: __init__.py  agent.py  tools.py
ai_ticket_agent/sub_agents/classifier/: __init__.py  agent.py  tools.py
ai_ticket_agent/sub_agents/escalation/: __init__.py  agent.py  tools.py
ai_ticket_agent/sub_agents/follow_up/: __init__.py  agent.py  tools.py
ai_ticket_agent/sub_agents/knowledge/: __init__.py  agent.py  tools.py
ai_ticket_agent/sub_agents/self_service/: agent.py
ai_ticket_agent/sub_agents/sla_tracker/: __init__.py  agent.py  tools.py
ai_ticket_agent/tools/: __init__.py  database.py  email_feedback_reader.py  email_sender.py  memory.py  monitoring.py  notification_sender.py  notifications.py  resolution_tracker.py  scheduler.py  slack_handlers.py
config/scenarios/: default.json
deployment/: __init__.py  deploy.py
knowledge_base/: __init__.py  articles.py  simple_search.py
tests/: __init__.py  test_agents.py  test_api.py  test_feedback_llm.py
